--- a/src/components/organisms/modules/mainBanner/index.module.css
+++ b/src/components/organisms/modules/mainBanner/index.module.css
@@ -32,7 +32,7 @@
   position: absolute;
   right: 0;
   top: -76px;
-  /* right: 200px; */
+  z-index: 0;
 }
 
 .textBlock {
@@ -60,4 +60,39 @@
 .textBlock p {
   font-size: 16px;
   margin: 0;
+}
+
+
+@media (max-width: 768px) {
+  .wrapper > div {
+    padding: 0 20px 20px 20px;
+  }
+  
+  .textBlock {
+    z-index: 1;
+    justify-content: space-between;
+    text-align: start;
+  }
+
+  .textBlock h1{
+   width: 200px;
+  }
+
+  .textBlock h3 {
+    color: #ff9400;
+    z-index: 1;
+  }
+
+  .photo {
+    width: 400px;
+    right: -120px;
+    top: -60px;
+    object-position: 0 -57px;
+  }
+
+  .textBlock p {
+    z-index: 1;
+
+  }
+  
 }
