--- a/src/pages/module/index.module.css
+++ b/src/pages/module/index.module.css
@@ -4,12 +4,16 @@
   align-items: center;
   margin: 0 auto;
   position: relative;
+  width: 100%;
+  flex-grow: 1;
 }
 
 .videoWrapper {
   display: flex;
   flex-direction: column;
   padding: 20px;
+  max-width: 500px;
+  width: 100%;
 }
 
 .videoLoader {
