--- a/src/components/atoms/logo/index.module.css
+++ b/src/components/atoms/logo/index.module.css
@@ -3,3 +3,10 @@
   height: 150px;
   border-radius: 50%;
 }
+
+@media (max-width: 768px) {
+  .logo {
+    width: 100px;
+    height: 100px;
+  }
+}
