--- a/src/pages/module/index.module.css
+++ b/src/pages/module/index.module.css
@@ -6,18 +6,19 @@
   position: relative;
   width: 100%;
   flex-grow: 1;
+  max-width: 500px;
 }
 
 .videoWrapper {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  max-width: 500px;
   width: 100%;
+  align-items: center;
 }
 
 .videoLoader {
-  width: 500px;
+  width: 100%;
   height: 250px;
   background-color: #000000;
   position: absolute;
