--- a/src/pages/modules/index.module.css
+++ b/src/pages/modules/index.module.css
@@ -7,3 +7,16 @@
     background-color: rgb(105, 142, 250);
     color: #ffffff;
 }
+
+.initModule {
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.initModule button {
+    width: 100%;
+}
