--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  text-align: center;
+  text-align: left;
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .App-logo {
