--- a/src/pages/404/index.module.css
+++ b/src/pages/404/index.module.css
@@ -5,9 +5,19 @@
   flex-direction: column;
   flex-grow: 1;
   flex-shrink: 1;
+  gap: 12px;
+  padding: 2rem;
+}
+
+.wrapper h2 {
+  color: var(--col--dark);
+  font-size: 2rem;
+  letter-spacing: 0.05em;
+  margin: 0;
 }
 
 .wrapper p {
   font-size: 18px;
-  margin-bottom: 10px;
+  margin: 0;
+  color: var(--col--muted);
 }
