--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,8 @@ body {
   font-size: 14px;
   line-height: 133%;
   color: var(--col--dark);
-  background-color: rgb(105, 142, 250)
+  background-color: var(--col--white);
+  min-height: 100%;
 }
 
 * {
@@ -37,15 +38,10 @@ a:hover {
 }
 
 #main {
-  max-width: var(--desktop-width);
-  margin: auto;
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-}
-
-#main footer {
-  margin-top: auto;
+  width: 100%;
 }
 
 .sticky-top {
@@ -244,42 +240,17 @@ _:-ms-fullscreen,
 
 .container {
   width: 100%;
-  margin: 0 auto;
+  max-width: var(--container-max);
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: var(--container-padding);
+  padding-right: var(--container-padding);
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .container {
-    padding: 0 10px;
-  }
-}
-
-@media (min-width: 577px) {
-  .container {
-    max-width: 540px;
-  }
-}
-
-@media (min-width: 769px) {
-  .container {
-    max-width: 720px;
-  }
-}
-
-@media (min-width: 993px) {
-  .container {
-    max-width: 960px;
-  }
-}
-
-@media (min-width: 1201px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-
-@media (min-width: 1401px) {
-  .container {
-    max-width: 1000px;
+    padding-left: var(--container-padding-mobile);
+    padding-right: var(--container-padding-mobile);
   }
 }
 
